--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install dependencies
       shell: bash -l {0}
-      run: mamba install root=${{ matrix.root-version }} numpy scipy prompt_toolkit matplotlib uncertainties xorg-libx11 docutils pytest pytest-cov
+      run: mamba install root=${{ matrix.root-version }} numpy scipy prompt_toolkit matplotlib uncertainties xorg-libx11 docutils pytest pytest-cov hsluv
 
     - name: Test with pytest
       shell: bash -l {0}
