rootext/calibration: Unify into header only library
Convert the Calibration.{hh,cc} rootext library into a header only library.
This is done to simplify the loading of the Calibration class via the
ROOT CLING Interpreter later on.

This patch also reworks some of the functions, but does not change any
behavior.

Updates the license header information to a SPDX identifier format.

--- a/src/hdtv/rootext/calibration/CMakeLists.txt
+++ b/src/hdtv/rootext/calibration/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
 project(calibration LANGUAGES CXX)
 
-set(SOURCES Calibration.cc)
-
-set(HEADERS Calibration.hh)
+set(HEADERS Calibration.hpp)
 
 find_package(ROOT REQUIRED COMPONENTS Core Hist)
 message(STATUS "ROOT Version ${ROOT_VERSION} found in ${ROOT_root_CMD}")
@@ -22,7 +20,7 @@ root_generate_dictionary(
   LINKDEF
   LinkDef.h)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES} G__${PROJECT_NAME}.cxx)
+add_library(${PROJECT_NAME} SHARED G__${PROJECT_NAME}.cxx)
 add_library(hdtv::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_14)
